started the user table
